fix alignment issues

--- a/css/global.css
+++ b/css/global.css
@@ -65,7 +65,8 @@ h2 {
   flex-basis: 100%;
 }
 
-p {
+p,
+a {
   font-family: "Roboto", sans-serif;
 }
 
