--- a/css/index.css
+++ b/css/index.css
@@ -157,6 +157,7 @@
 
   .index_section--welcome__div--col-1 {
     background: none;
+    padding:80px 60px 80px 0px;
   }
 
   .index_section--welcome__div--col-2 {
